--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 </head>
 
 <body>
+  <div class="app">
+    <h2>Entrez le nombre de minutes</h2>
 
-  <h3>Entrez le nombre de minutes</h3>
-
-  <form id="form">
-    <input type="number" min="1" max="99" size="1" maxlength="2" id="choice">
-    <input id="start" type="submit" value="GO">
-  </form>
-
-  <div id="countdownDisplay"></div>
-
+    <form id="form">
+      <input type="number" min="1" max="99" size="1" maxlength="2" id="choice">
+      <input id="start" type="submit" value="GO">
+    </form>
+  
+    <div id="countdownDisplay"></div>
+  </div>
 
   <script src="./index.js"></script>
 </body>
